--- a/notebooks/00_process_brains.ipynb
+++ b/notebooks/00_process_brains.ipynb
@@ -70,43 +70,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "options = {\n",
-    "    '--ref': '/root/data/p00002.nii',\n",
-    "    '--flo': '/root/data/wm0002.nii',\n",
-    "    '--ref_seg': '/root/data/derivatives/p00002_seg.nii',\n",
-    "    '--flo_seg': '/root/data/derivatives/wm0002_seg.nii',\n",
-    "    '--flo_reg': '/root/data/derivatives/wm0002_reg.nii',\n",
-    "    '--fwd_field': '/root/data/derivatives/forward_field.nii',\n",
-    "    '--bak_field': '/root/data/derivatives/inverse_field.nii',\n",
-    "    '--threads': '9'\n",
-    "}\n",
+    "\n",
     "data_folder = r'/Users/cu135/Library/CloudStorage/OneDrive-Personal/OneDrive_Documents/Work/Software/VBM/demo'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'CalvinVBM' has no attribute 'run_docker_container'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcalvin_vbm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CalvinVBM\n\u001b[0;32m----> 3\u001b[0m \u001b[43mCalvinVBM\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_docker_container\u001b[49m(\n\u001b[1;32m      4\u001b[0m     method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124measyreg\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      5\u001b[0m     data_dir\u001b[38;5;241m=\u001b[39mdata_folder,\n\u001b[1;32m      6\u001b[0m     command_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124measywarp-mri\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      7\u001b[0m     options\u001b[38;5;241m=\u001b[39moptions\n\u001b[1;32m      8\u001b[0m )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'CalvinVBM' has no attribute 'run_docker_container'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running Docker container with command: docker run --rm -it -v /Users/cu135/Library/CloudStorage/OneDrive-Personal/OneDrive_Documents/Work/Software/VBM/demo:/root/data er:latest easyreg-mri --ref /root/data/p00002.nii --flo /root/data/wm0002.nii --ref_seg /root/data/derivatives/p00002_seg.nii --flo_seg /root/data/derivatives/wm0002_seg.nii --flo_reg /root/data/derivatives/wm0002_reg.nii --fwd_field /root/data/derivatives/forward_field.nii --bak_field /root/data/derivatives/inverse_field.nii --threads 9\n",
+      "the input device is not a TTY\n",
+      "\n",
+      "An error occurred while running the Docker container: Command '['docker', 'run', '--rm', '-it', '-v /Users/cu135/Library/CloudStorage/OneDrive-Personal/OneDrive_Documents/Work/Software/VBM/demo:/root/data', 'er:latest', 'easyreg-mri', '--ref', '/root/data/p00002.nii', '--flo', '/root/data/wm0002.nii', '--ref_seg', '/root/data/derivatives/p00002_seg.nii', '--flo_seg', '/root/data/derivatives/wm0002_seg.nii', '--flo_reg', '/root/data/derivatives/wm0002_reg.nii', '--fwd_field', '/root/data/derivatives/forward_field.nii', '--bak_field', '/root/data/derivatives/inverse_field.nii', '--threads', '9']' returned non-zero exit status 1.\n"
      ]
     }
    ],
    "source": [
-    "from src.calvin_vbm import CalvinVBM\n",
-    "CalvinVBM.run_docker_container(\n",
+    "from src.calvin_vbm import run_docker_container\n",
+    "run_docker_container(\n",
     "    method='easyreg',\n",
     "    data_dir=data_folder,\n",
-    "    command_type='easywarp-mri',\n",
-    "    options=options\n",
+    "    command_type='easyreg-mri'\n",
     ")"
    ]
   },
@@ -119,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileExistsError",
+     "evalue": "Docker image not found. You must build or pull the image first.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcalvin_vbm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CalvinVBM\n\u001b[0;32m----> 2\u001b[0m \u001b[43mCalvinVBM\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_docker_with_script\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscript\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Library/CloudStorage/OneDrive-Personal/OneDrive_Documents/Work/Software/VBM/src/calvin_vbm.py:119\u001b[0m, in \u001b[0;36mCalvinVBM.run_docker_with_script\u001b[0;34m(data_dir_path, script_path, tag)\u001b[0m\n\u001b[1;32m    117\u001b[0m image_check \u001b[38;5;241m=\u001b[39m subprocess\u001b[38;5;241m.\u001b[39mrun([\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdocker\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mimages\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-q\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcat12:latest\u001b[39m\u001b[38;5;124m\"\u001b[39m], capture_output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, text\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    118\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m image_check\u001b[38;5;241m.\u001b[39mstdout\u001b[38;5;241m.\u001b[39mstrip():\n\u001b[0;32m--> 119\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDocker image not found. You must build or pull the image first.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    121\u001b[0m \u001b[38;5;66;03m# Run the Docker container with mounted volumes\u001b[39;00m\n\u001b[1;32m    122\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRunning Docker container with script: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mscript_filename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mFileExistsError\u001b[0m: Docker image not found. You must build or pull the image first."
+     ]
+    }
+   ],
    "source": [
     "from src.calvin_vbm import CalvinVBM\n",
     "CalvinVBM.run_docker_with_script(data_folder, script)"
