--- a/notebooks/00_process_brains.ipynb
+++ b/notebooks/00_process_brains.ipynb
@@ -90,7 +90,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running Docker container with script: run_segmentation_bids.sh\n"
+      "Running Docker container with script: run_segmentation_bids.sh\n",
+      "Docker container executed successfully.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -122,6 +134,20 @@
     "from src.calvin_vbm import CalvinVBM\n",
     "CalvinVBM.extract_tiv_from_xml(folder_path)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Clean Up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
