--- a/notebooks/02A_Z_atrophy_seed_derivation.ipynb
+++ b/notebooks/02A_Z_atrophy_seed_derivation.ipynb
@@ -265,9 +265,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python3.10 (nimlab)",
    "language": "python",
-   "name": "python3"
+   "name": "nimlab_py310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -279,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.16"
   },
   "orig_nbformat": 4
  },
