--- a/notebooks/02B_W_atrophy_seed_derivation.ipynb
+++ b/notebooks/02B_W_atrophy_seed_derivation.ipynb
@@ -264,19 +264,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import importlib\n",
-    "from calvin_utils.vbm_utils import w_scoring  # Import the module itself\n",
-    "\n",
-    "# Reload the module to get the updated code\n",
-    "importlib.reload(w_scoring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from calvin_utils.vbm_utils.w_scoring  import CalvinWMap\n",
     "wmapper = CalvinWMap(dataframes_dict=dataframes_dict, control_dataframes_dict=control_dataframes_dict, control_covariates_df=control_covariates_df, patient_covariates_df=patient_covariates_df)\n",
     "atrophy_dataframes_dict, significant_atrophy_dataframes_dict = wmapper.run()"
@@ -316,11 +303,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory='/Volumes/Expansion/datasets/adni/neuroimaging/all_patients_atrophy_seeds'"
+    "base_directory='/Volumes/Expansion/datasets/adni/neuroimaging/all_patients_atrophy_seeds'\n",
+    "session = 'pre-tms'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Must provide a mask path. One is available in /assets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_path = '/Users/cu135/Library/CloudStorage/OneDrive-Personal/OneDrive_Documents/Work/Software/VBM/assets/MNI152_T1_2mm_brain.nii'"
    ]
   },
   {
@@ -330,7 +334,12 @@
    "outputs": [],
    "source": [
     "from calvin_utils.vbm_utils.processing import save_nifti_to_bids\n",
-    "save_nifti_to_bids(unthresholded_atrophy_dataframes_dict, bids_base_dir=base_directory, analysis='tissue_segment_w_scores', dry_run=False);"
+    "save_nifti_to_bids(unthresholded_atrophy_dataframes_dict, \n",
+    "                   bids_base_dir=base_directory, \n",
+    "                   mask_path=mask_path,\n",
+    "                   analysis='tissue_segment_w_scores', \n",
+    "                   ses=session,\n",
+    "                   dry_run=False);"
    ]
   },
   {
@@ -347,7 +356,12 @@
    "outputs": [],
    "source": [
     "from calvin_utils.vbm_utils.processing import save_nifti_to_bids\n",
-    "save_nifti_to_bids(thresholded_atrophy_dataframes_dict, bids_base_dir=base_directory, analysis='thresholded_tissue_segment_w_scores', dry_run=False);"
+    "save_nifti_to_bids(unthresholded_atrophy_dataframes_dict, \n",
+    "                   bids_base_dir=base_directory, \n",
+    "                   mask_path=mask_path,\n",
+    "                   analysis='thresholded_tissue_segment_w_scores', \n",
+    "                   ses=session,\n",
+    "                   dry_run=False);"
    ]
   },
   {
@@ -386,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.16"
   },
   "orig_nbformat": 4
  },
