--- a/notebooks/01_preprocess_tissue_segments.ipynb
+++ b/notebooks/01_preprocess_tissue_segments.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory = r'/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri'\n",
-    "grey_matter_glob_name_pattern = 'smwp1*'\n",
-    "white_matter_glob_name_pattern = 'smwp2*'\n",
-    "csf_glob_name_pattern = 'smwp3*'"
+    "base_directory = r'/Volumes/OneTouch/datasets/adni/neuroimaging/easyreg_processed/sub-*/segmentation'\n",
+    "grey_matter_glob_name_pattern = '*smwp1*'\n",
+    "white_matter_glob_name_pattern = '*smwp2*'\n",
+    "csf_glob_name_pattern = '*smwp3*'"
    ]
   },
   {
@@ -81,11 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_path = '/Users/cu135/Library/CloudStorage/OneDrive-Personal/OneDrive_Documents/Work/Software/VBM/assets/MNI152_T1_2mm_brain.nii'"
+    "import os \n",
+    "current_dir = os.path.dirname(os.path.abspath(os.getcwd()))\n",
+    "mask = os.path.join(current_dir, 'rois', 'MNI152_T1_2mm_brain_mask.nii')"
    ]
   },
   {
@@ -97,87 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Will search:,  /Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1*\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 37/37 [00:04<00:00,  8.20it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downsampled grey_matter segment data \n",
-      " \n",
-      "Saved files to ['/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S06_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S09_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S10_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S11_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S12_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S14_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S15_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S17_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S18_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S19_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S20_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S21_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S22_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S24_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S25_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S26_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S27_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S28_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S30_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S31_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S32_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S33_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S35_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S36_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S37_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S38_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S39_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S40_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S41_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S42_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S43_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S44_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S45_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S46_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S47_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S48_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp1S49_T1_resampled.nii']\n",
-      "-------------------------------- \n",
-      "\n",
-      "Will search:,  /Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2*\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 37/37 [00:04<00:00,  8.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downsampled white_matter segment data \n",
-      " \n",
-      "Saved files to ['/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S06_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S09_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S10_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S11_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S12_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S14_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S15_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S17_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S18_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S19_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S20_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S21_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S22_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S24_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S25_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S26_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S27_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S28_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S30_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S31_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S32_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S33_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S35_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S36_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S37_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S38_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S39_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S40_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S41_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S42_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S43_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S44_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S45_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S46_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S47_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S48_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp2S49_T1_resampled.nii']\n",
-      "-------------------------------- \n",
-      "\n",
-      "Will search:,  /Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3*\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 37/37 [00:04<00:00,  8.50it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downsampled cerebrospinal_fluid segment data \n",
-      " \n",
-      "Saved files to ['/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S06_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S09_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S10_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S11_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S12_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S14_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S15_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S17_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S18_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S19_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S20_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S21_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S22_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S24_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S25_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S26_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S27_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S28_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S30_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S31_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S32_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S33_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S35_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S36_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S37_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S38_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S39_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S40_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S41_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S42_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S43_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S44_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S45_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S46_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S47_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S48_T1_resampled.nii', '/Volumes/Expansion/datasets/Jung_TMS_AD/anat/pre_T1/mri/smwp3S49_T1_resampled.nii']\n",
-      "-------------------------------- \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from calvin_utils.vbm_utils.preprocessing import downsample_orchestrator\n",
     "output_paths = downsample_orchestrator(base_directory, \n",
     "                                       grey_matter_glob_name_pattern, \n",
     "                                       white_matter_glob_name_pattern, \n",
     "                                       csf_glob_name_pattern,\n",
-    "                                       mask_path=mask_path)"
+    "                                       mask_path=mask)"
    ]
   },
   {
@@ -208,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.12"
   },
   "orig_nbformat": 4
  },
