Updates to notebooks for improved atrophy calculation, added more CAT functionalities.

--- a/notebooks/04a_generate_Z_controls.ipynb
+++ b/notebooks/04a_generate_Z_controls.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir = '/Volumes/OneTouch/datasets/adni/neuroimaging/cat12_control_dist_smwp'"
+    "out_dir = '/Volumes/OneTouch/datasets/adni/neuroimaging/cat12_control_dist_mwp'"
    ]
   },
   {
@@ -29,10 +29,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = '/Volumes/OneTouch/datasets/adni/neuroimaging/cat12_tpms'\n",
-    "gm = 'smwp1*resampled*'\n",
-    "wm = 'smwp2*resampled*'\n",
-    "csf = 'smwp3*resampled*'"
+    "root = '/Users/cu135/Partners HealthCare Dropbox/Calvin Howard/resources/datasets/AtrophyMapping_Controls/cat12_mwp'\n",
+    "gm = '*mwp1*resampled*'\n",
+    "wm = '*mwp2*resampled*'\n",
+    "csf = '*mwp3*resampled*'"
    ]
   },
   {
