--- a/notebooks/00_process_brains.ipynb
+++ b/notebooks/00_process_brains.ipynb
@@ -156,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python_3.7.7_nimlab",
+   "display_name": "vbm_venv",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
