--- a/notebooks/01_preprocess_tissue_segments.ipynb
+++ b/notebooks/01_preprocess_tissue_segments.ipynb
@@ -66,10 +66,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_directory = r'/Volumes/OneTouch/datasets/adni/neuroimaging/easyreg_processed/sub-*/segmentation'\n",
-    "grey_matter_glob_name_pattern = '*smwp1*'\n",
-    "white_matter_glob_name_pattern = '*smwp2*'\n",
-    "csf_glob_name_pattern = '*smwp3*'"
+    "base_directory = r'/Users/cu135/Partners HealthCare Dropbox/Calvin Howard/resources/datasets/MSA_Atrophy_Kurana/msa_niftis/mri'\n",
+    "grey_matter_glob_name_pattern = '*mwp1*'\n",
+    "white_matter_glob_name_pattern = '*mwp2*'\n",
+    "csf_glob_name_pattern = '*mwp3*'"
    ]
   },
   {
